// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > has 'base' ('md') 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-«r18»"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 select-md select-ghost"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      base select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has 'large' ('lg') 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-«r1c»"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 select-lg select-ghost"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      large select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has 'small' ('sm') 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-«r14»"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 select-sm select-ghost"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      small select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has 'tiny' ('xs') 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-«r10»"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 select-xs select-ghost"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      tiny select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has a label 1`] = `
<DocumentFragment>
  <label
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 min-h-fit h-10 select-ghost"
  >
    <span
      class="label"
    >
      Gender
    </span>
    <button
      aria-autocomplete="none"
      aria-controls="radix-«r1g»"
      aria-expanded="false"
      data-placeholder=""
      data-state="closed"
      dir="ltr"
      role="combobox"
      type="button"
    >
      <span
        style="pointer-events: none;"
      >
        Choose gender
      </span>
    </button>
  </label>
</DocumentFragment>
`;

exports[`Select > has a prefix label 1`] = `
<DocumentFragment>
  <label
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 min-h-fit h-10 select-ghost"
  >
    <span
      class="label"
    >
      Publish date
    </span>
    <button
      aria-autocomplete="none"
      aria-controls="radix-«r1k»"
      aria-expanded="false"
      data-placeholder=""
      data-state="closed"
      dir="ltr"
      role="combobox"
      type="button"
    >
      <span
        style="pointer-events: none;"
      >
        Chose year
      </span>
    </button>
  </label>
</DocumentFragment>
`;

exports[`Select > has a suffix label 1`] = `
<DocumentFragment>
  <label
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 min-h-fit h-10 select-ghost"
  >
    <span
      class="label"
    >
      .com
    </span>
    <button
      aria-autocomplete="none"
      aria-controls="radix-«r1o»"
      aria-expanded="false"
      data-placeholder=""
      data-state="closed"
      dir="ltr"
      role="combobox"
      type="button"
    >
      <span
        style="pointer-events: none;"
      >
        Chose domain name
      </span>
    </button>
  </label>
</DocumentFragment>
`;

exports[`Select > has accent variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-«rc»"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 select-accent min-h-fit h-10 select-ghost"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      accent select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has error variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-«rs»"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 select-error min-h-fit h-10 select-ghost"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      error select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has info variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-«ro»"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 select-info min-h-fit h-10 select-ghost"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      info select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has primary variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-«r4»"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 select-primary min-h-fit h-10 select-ghost"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      primary select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has secondary variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-«r8»"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 select-secondary min-h-fit h-10 select-ghost"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      secondary select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has success variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-«rg»"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 select-success min-h-fit h-10 select-ghost"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      success select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > has warning variant 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-«rk»"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 select-warning min-h-fit h-10 select-ghost"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      warning select
    </span>
  </button>
</DocumentFragment>
`;

exports[`Select > renders with the correct initial state 1`] = `
<DocumentFragment>
  <button
    aria-autocomplete="none"
    aria-controls="radix-«r0»"
    aria-expanded="false"
    class="select flex items-center justify-between rounded-md text-sm text-left disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 transition-all duration-100 min-h-fit h-10 select-ghost"
    data-placeholder=""
    data-state="closed"
    dir="ltr"
    role="combobox"
    type="button"
  >
    <span
      style="pointer-events: none;"
    >
      Theme
    </span>
  </button>
</DocumentFragment>
`;
